Fixed responsive page height when viewport is too small

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 body {
     text-align: center;
     font-family: Arial, sans-serif;
-    min-height: 100%;
+    min-height: 520px;
     min-width: 1139px;
 }
 
@@ -32,7 +32,7 @@ nav {
 
 footer {
     text-align: left;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     min-width: 1139px;
@@ -154,7 +154,6 @@ footer {
 
 #logo-container {
     display: relative;
-    margin-top: 40px;
     padding-top: 109px;
     height: 233px;
 }
